# practica1-EstructuraDeDatos

./: CMakeLists.txt  LICENSE  README.md
src/: Main.c  Scheduler.c  Scheduler.h  Task.c  Task.h
